# financeFlow

./: .env.example  .gitignore  README.md  TODO.md  test.csv
backend/: .env.example  create_db.py  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  budgets.py  transactions.py
backend/core/: i18n.py  llm_service.py  security.py
backend/db/: database.py  models.py
backend/processing/: pdf_parser.py  transaction_parser.py
backend/schemas/: auth.py  budget.py  transaction.py
backend/tests/unused/: cli_parser.py  pdfplumberTest.py  testExtraction.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  i18n.ts  index.css
frontend/src/components/: AddTransactionModal.tsx  DeleteConfirmationModal.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx  PreferencesContext.tsx
frontend/src/hooks/: useCurrencyFormatter.ts
frontend/src/locales/: en.json  es.json  fr.json
frontend/src/pages/: AccountSettings.tsx  Budgeting.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Personalization.tsx  Register.tsx  Reports.tsx  Settings.tsx  Transactions.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
