[tool.poetry]
name = "finance-app"
version = "0.1.0"
description = "Financial transaction analysis application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api" },
    { include = "core" },
    { include = "db" },
    { include = "schemas" },
]
[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.20"
pandas = "^2.1.0"
mysqlclient = "^2.2.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
